--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -18,10 +18,13 @@
 
 <div class="flex flex-row justify-end items-center">
      
-    <!--Boton agregar-->
+    <!--Boton agregar/consultar-->
     <a [routerLink]="direccion">
         <button class="bg-white shadow-md rounded-lg p-5 m-3 h-8 w-28 hover:scale-105 ease-in-out duration-300 flex items-center justify-center" (click)="funcionModal?.()">
-            <p class="font-bold text-md text-lime-500"> Add</p> 
+            <!--Aqui le digo que si la direccion es "/bill-page" que el nombre del boton del search-bar sea "consult" de lo contrario que sea add -->
+            <p class="font-bold text-md text-lime-500" *ngIf="isDirectionBill(); else isOtherDirection">Consult</p> 
+            <ng-template #isOtherDirection> <p class="font-bold text-md text-lime-500">Add</p></ng-template>
+           
         </button>
     </a>  
 </div>
