--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -12,7 +12,7 @@
     </div>
     <button
       class="linea bg-gray-200 font px-3 rounded-xl shadow-md hover:scale-105 ease-in-out duration-300 mt-1 pt-1"
-      (click)="onAddToCart()"
+      (click)="onShowDetail()"
       
     >
       Add cart
