mejore el dashboard y traduje la pagina de ingles a espanol

--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="cursor-pointer	 min-h-screen w-44 object-contain space-y-20 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
+<div class="cursor-pointer min-h-screen w-44 object-contain space-y-12 xl:space-y-9 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
 
     <a routerLink="">
     <div class="logo w-full h-1/4 mt-5 p-3 flex space-x-4 drop-shadow-xl">
@@ -15,7 +15,7 @@
     </a>
 
   <div class="menu w-full justify-self-auto self-center ">
-    <ul class=" p-2 space-y-10 items-center">
+    <ul class=" p-2 space-y-10 xl:space-y-7 items-center">
       
         <a routerLink="" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
           <li class="">
@@ -23,7 +23,7 @@
           rounded-lg">
             
             <img src="../../../assets/img/bar-chart.png" class="w-6 h-6">
-            <span class="text-lg text-end mt-2">Dashboard</span>
+            <span class="text-lg text-end mt-2">Tablero</span>
           </div>
           </li>
         </a>
@@ -33,7 +33,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg ">
             <img src="../../../assets/img/money.png" class="w-6 h-6">
-            <span class="text-lg text-end mt-1">Bills</span>
+            <span class="text-lg text-end mt-1">Facturas</span>
           </div>
         </a>
       </li>
@@ -42,7 +42,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg ">
           <img src="../../../assets/img/box.png" class="w-6 h-6">
-          <span class="text-lg text-end mt-1">Inventory</span>
+          <span class="text-lg text-end mt-1">Inventario</span>
           </div>
         </a>
       </li>
@@ -51,7 +51,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg ">
           <img src="../../../assets/img/target.png" class="w-6 h-6">
-          <span class="text-lg text-end ">Clients</span>
+          <span class="text-lg text-end ">Clientes</span>
           </div>
         </a>
       </li>
@@ -60,7 +60,7 @@
           <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-gray-100 
           rounded-lg ">
           <img src="../../../assets/img/cashier-machine.png" class="w-6 h-6">
-          <span class="text-lg text-end ">Cashier</span>
+          <span class="text-lg text-end ">Caja</span>
           </div>
         </a>
       </li>
