--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -1,10 +1,14 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Bills</p>
+        <div class="titles flex spacing relative justify-center items-center pr-6">
+        <p class="justify-start  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Facturas
+        </p>
+        <app-user-icon></app-user-icon>   
+        </div>
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
-        <app-bill-table></app-bill-table>
+        <div class="flex m-34 text-3xl justify-center item-center content-center h-full"><p>Aqui va tu integracion german</p></div>
     </div>
 </div>
