--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,7 +1,11 @@
 <div class="flex containeres">
   <app-side-nav></app-side-nav>
   <div class="flex flex-col w-full ml-10">
-    <p class="m-2 ml-0 text-3xl font-medium drop-shadow-lg my-6">Inventory</p>
+    <div class="titles flex spacing relative justify-center items-center pr-6">
+      <p class="justify-start  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Inventario
+      </p>
+      <app-user-icon></app-user-icon>   
+      </div>
     <app-search-bar
       (enviarProductoABuscar)="buscarProducto($event)"
       [funcionModal]="openModal"
@@ -202,4 +206,4 @@
       </div>
     </form>
   </dialog>
-</div>2xl:h-12 xl:h-10 w-1/4
+</div>
