voy a agregar el efecto blur al login

--- a/src/app/components/entry-bg/entry-bg.component.html
+++ b/src/app/components/entry-bg/entry-bg.component.html
@@ -1,5 +1,5 @@
 <div class="md:float-right h-1/2 md:min-h-screen md:w-1/2  bg-[url('https://www.altonivel.com.mx/wp-content/uploads/2018/02/sat.jpg')]">
     <div class="min-h-screen w-full bg-black/50 grid place-content-center">
-      <h1 class="text-white text-4xl font-bold m">Easy-Biller</h1>
+      <h1 class="text-white text-4xl font-bold m">BillFast Lite</h1>
     </div>
     </div>
