--- a/src/app/components/c-login/c-login.component.html
+++ b/src/app/components/c-login/c-login.component.html
@@ -1,21 +1,21 @@
 
     <div class="md:float-left h-1/2 md:min-h-screen md:w-1/2 bg-gradient-to-b	from-slate-100 to-stone-100">
       <div class="login-form flex flex-col justify-center items-center	gap-y-8	 min-h-screen	">
-        <h1 class="text-2xl md:text-3xl font-bold mb-5">Log In to your account</h1>
+        <h1 class="text-2xl md:text-3xl font-bold mb-5">Inicia sesión con tu cuenta</h1>
         <div class="md:w-2/5 ">
-          <p class="font-bold mb-2">E-mail</p>
+          <p class="font-bold mb-2">Correo electrónico</p>
           <input type="text" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
         </div>
         <div class=" md:w-2/5 ">
-          <p class="font-bold mb-2">Password</p>
+          <p class="font-bold mb-2">Contraseña</p>
           <input type="password" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
         </div>
         <div class="md:w-2/5 flex flex-col items-center w-full">
           <div  class="md:flex-row md:w-full">
-            <a routerLink="/sign-up" (click)="miloco()"><button class="bg-black font text-white md:w-2/5 mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg shadow-slate-900/40 font-bold hover:scale-105 ease-in-out duration-300" >  Sign  up</button></a>
-            <a routerLink=""><button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">Log In</button></a>
+            <a routerLink="/sign-up" (click)="miloco()"><button class="bg-black font text-white md:w-2/5 mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg shadow-slate-900/40 font-bold hover:scale-105 ease-in-out duration-300" >  Regístrate</button></a>
+            <a routerLink=""><button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">Iniciar sesión</button></a>
           </div>
-          <a routerLink=""><p class="py-5">I forgot my password...</p></a>
+          <a routerLink=""><p class="py-5">Olvidé mi contraseña...</p></a>
         </div>
       </div>
     </div>
