--- a/src/app/components/c-signup/c-signup.component.html
+++ b/src/app/components/c-signup/c-signup.component.html
@@ -1,27 +1,60 @@
 
-    <div class="md:float-left h-1/2 md:min-h-screen md:w-1/2 bg-gradient-to-b	from-slate-100 to-stone-100">
-      <div class="login-form flex flex-col justify-center items-center	gap-y-8	 min-h-screen	">
-        <h1 class="text-2xl md:text-3xl font-bold mb-5">Sign In to a new account</h1>
-        <div class="md:w-2/5 ">
-          <p class="font-bold mb-2">E-mail</p>
-          <input type="text" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
-        </div>
-        <div class=" md:w-2/5 ">
-          <p class="font-bold mb-2">Password</p>
-          <input type="password" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
-        </div>
-        <div class=" md:w-2/5 ">
-            <p class="font-bold mb-2">Repeat Password</p>
-            <input type="password" class="w-full  p-2 py-1 ... rounded-lg shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 	...">
+    <div class="md:float-left h-1/2 md:min-h-screen w-1/2 bg-gradient-to-b	from-lime-500 to-stone-100">
+      <div class="login-form flex flex-col justify-center items-center w-full	gap-y-8	 min-h-screen	">
+        <h1 class="text-2xl md:text-3xl font-bold mb-5">Regístrate</h1>
+        <p>¿Ya tienes una cuenta?
+         <span class="font-bold">Iniciar sesión</span></p>
+
+        <div class="flex flex-col justify-center items-center w-2/5 border-4">
+          
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+            <label
+              class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
+              for="grid-first-name"
+            >
+              Email
+            </label>
+            <input
+              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
+              id="grid-first-name"
+              type="text"
+              placeholder="Ingrese su correo"
+            />
           </div>
-        <div class="md:w-2/5 flex flex-col items-center w-full">
-          <div  class="md:flex-row md:w-full">
-            <a routerLink="/sign-up"> <button class="bg-black font text-white md:w-2/5 mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg shadow-slate-900/40 font-bold hover:scale-105 ease-in-out duration-300">
-              Sign up</button></a>
-             <a routerLink=""><button class="bg-sky-500 md:w-2/5 md:float-right mx-5 md:mx-0 px-4 py-2 rounded-full shadow-lg font-bold shadow-sky-500/40 hover:scale-105 ease-in-out duration-300">  Log In</button></a>
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+            <label
+            class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
+              for="grid-first-name"
+            >
+            Contraseña:
+            </label>
+            <input
+              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
+              id="grid-first-name"
+              type="text"
+              placeholder="Ingrese su contraseña"
+            />
           </div>
-          <p class="py-5">I forgot my password...</p>
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+            <label
+            class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
+              for="grid-first-name"
+            >
+              Repita su contraseña:
+            </label>
+            <input
+              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
+              id="grid-first-name"
+              type="text"
+              placeholder="Repita su contraseña"
+            />
+
+          </div> 
+          <a routerLink="/sign-up"> 
+            <button class="mt-10 bg-lime-600 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">
+            Regístrate</button>
+          </a>
         </div>
-      </div>
+        </div>
     </div>
 
