--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -1,5 +1,8 @@
-<a routerLink="">
+<a routerLink="/log-in">
     <button class="w-10 h-10 rounded-full shadow-md bg-slate-200 p-2 justify-end">
         <img src="../../../assets/img/user.png" alt=""/>
     </button>
 </a>
+<dialog>
+    
+</dialog>
