elimine los componentes de clogin, csingup y entrylog. Tambien agregue varias mejoras al log-in

--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -1,5 +1,5 @@
 <a routerLink="/log-in">
-    <button class="w-10 h-10 rounded-full shadow-md bg-slate-200 p-2 justify-end">
+    <button class="w-10 h-10 rounded-full shadow-md bg-gray-200 p-2 justify-end hover:scale-105 ease-in-out duration-300">
         <img src="../../../assets/img/user.png" alt=""/>
     </button>
 </a>
