--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -19,23 +19,28 @@
 
             </div>
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+            <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                   Email
             </label>
             <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo"/>
             </div>
 
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+            <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                 Contraseña: 
             </label>
             <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña"/>
             </div>
 
-            <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-                <label class="block tracking-wide text-gray-500 text-xs font-bold mb-2" for="grid-first-name">
+            <div class=" flex justify-around w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+                <label class="items-center flex tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
+                    <input type="checkbox" placeholder="recuerdame" class="mx-2"> <p>Recuerdame</p>
+                </label>
+                
+                <label class="items-center tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
                     <a routerLink="">¿Olvidaste tu contraseña?</a> 
                 </label>
+                
             </div> 
             <div class="flex justify-center items-center w-full">
                 <a routerLink=""> 
