--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -18,21 +18,21 @@
                 <p>¿Ya tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/log-in">Inicia sesión</a></span></p>
             </div>
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+            <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                   Email
             </label>
             <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo"/>
             </div>
 
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+            <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                 Contraseña: 
             </label>
             <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña"/>
             </div>
 
             <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+            <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
                   Repita su contraseña:
             </label>
             <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Repita su contraseña"/>
