--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,16 +1,61 @@
 <div class="flex containeres">
   <app-side-nav></app-side-nav>
-  <div class="flex flex-col w-full ml-10">
-      <div class="titles flex spacing relative justify-center items-center pr-6">
-        <p class="justify-start  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Tablero
-        </p>
-        <app-user-icon></app-user-icon>   
+  <div class="flex flex-col w-full h-screen ml-10">
+    <div class="titles flex spacing relative justify-center items-center pr-6">
+      <p class="justify-start  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Tablero
+      </p>
+      <app-user-icon></app-user-icon>   
+    </div>
+    <!--Primera tabla-->
+    <div class="flex flex-col justify-start w-full">
+      <div class="card w-5/6 h-[40vh] bg-slate-100 shadow-md relative rounded-lg space-y-10">
+        <p class="text-2xl font-semibold drop-shadow-lg ml-3 mt-5">Overview</p>
+        <div class="mt-3">
+          <p class="text-md font-bold ml-3 mb-3">Ganancias</p>
+          <div class="w-5/6 bg-lime-500 h-3 rounded-lg ml-3"></div>
         </div>
-      <div class="flex flex-col justify-start w-full">
-        <div class="w-2/5 h-full flex flex-col justify-between m-2">
-          <div
-            class="card w-full h-[38vh] bg-slate-100 shadow-md relative rounded-lg"
-          >
+        <div class="mt-3">
+          <p class="text-md font-bold ml-3 mb-3">Gastos</p>
+          <div class="w-1/5 bg-red-500 h-3 rounded-lg ml-3"></div>
+        </div>
+        <div class="mt-3">
+          <p class="text-md font-bold ml-3 mb-3">Neto</p>
+          <div class="w-3/5 bg-cyan-400 h-3 rounded-lg ml-3"></div>
+        </div>
+      </div>
+    </div>
+    <!--Segunda tabla-->
+      <div class="flex flex-col card h-[40vh] bg-slate-100 shadow-md relative rounded-lg w-5/6 mt-4 space-y-10">
+        <p class="text-2xl font-semibold drop-shadow-lg ml-3 mt-5">Facturas</p>
+        <div class="flex space-x-20 mt-4">
+          <div class="">
+            <p class="text-md font-semibold text-lime-500 drop-shadow-md ml-3">
+              Hechas
+            </p>
+            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+          </div>
+          <div class="">
+            <p class="text-md font-semibold text-red-500 drop-shadow-md">
+              Cobradas
+            </p>
+            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+          </div>
+          <div class="">
+            <p class="text-md font-semibold text-cyan-400 drop-shadow-md ml-3">
+              Sin pagar
+            </p>
+            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+          </div>
+        </div>
+        <p class="text-sm font-normal mt-2 text-gray-400 ml-3">
+          Ultima actualizacion hace 5s...
+        </p>
+      </div>
+    </div>
+  </div>
+
+      <!-- <div class="flex flex-col justify-start w-full">
+          <div class="card w-5/6 h-[30vh] bg-slate-100 shadow-md relative rounded-lg">
             <p class="text-2xl font-semibold drop-shadow-lg">Overview</p>
             <div class="mt-1">
               <p class="text-md font-normal">Ganancias</p>
@@ -26,9 +71,9 @@
             </div>
           </div>
         </div>
-        <div class="w-2/5 h-full flex flex-col justify-between m-2">
+        <div class="w-full h-full flex flex-col justify-between m-2">
           <div
-            class="card  h-[38vh] bg-slate-100 shadow-md relative rounded-lg"
+            class="card h-[30vh] bg-slate-100 shadow-md relative rounded-lg w-5/6"
           >
             <p class="text-2xl font-semibold drop-shadow-lg">Facturas</p>
             <div class="flex space-x-20 mt-4">
@@ -55,8 +100,7 @@
               Ultima actualizacion hace 5s...
             </p>
           </div>
-          
         </div>
       </div>
-    </div>
-  </div>
+    </div> -->
+
