--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -43,7 +43,7 @@
             </div> 
             <div class="flex justify-center items-center w-full">
                 <a [routerLink]="ruta"> 
-                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3" (click)="validarLogin()">
+                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3">
                     Inicia sesión
                     </button>
                 </a>
