tengo el disenio del drop down listo

--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="cursor-pointer min-h-screen w-44 object-contain space-y-12 xl:space-y-9 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
+<div class="cursor-pointer min-h-screen w-44 object-contain space-y-12 xl:space-y-9 2xl:space-y-14 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
 
     <a routerLink="">
     <div class="logo w-full h-1/4 mt-5 p-3 flex space-x-4 drop-shadow-xl">
@@ -15,7 +15,7 @@
     </a>
 
   <div class="menu w-full justify-self-auto self-center ">
-    <ul class=" p-2 space-y-10 xl:space-y-7 items-center">
+    <ul class=" p-2 space-y-12 xl:space-y-7 2xl:space-y-14 items-center">
       
         <a routerLink="" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
           <li class="">
