--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -1,7 +1,7 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
-        <div class="titles flex spacing relative justify-center items-center pr-6">
+        <div class="titles flex spacing justify-center relative items-center pr-6">
         <p class="justify-start  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Facturas
         </p>
         <app-user-icon></app-user-icon>   
@@ -9,6 +9,6 @@
         <app-search-bar
         [direccion]="ruta"
         ></app-search-bar>
-        <div class="flex m-34 text-3xl justify-center item-center content-center h-full"><p>Aqui va tu integracion german</p></div>
+        <div class="flex m-34 text-3xl justify-center item-center content-center h-full "><p>Aqui va tu integracion german</p></div>
     </div>
 </div>
