--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -1,8 +1,13 @@
-<a routerLink="/log-in">
-    <button class="w-10 h-10 rounded-full shadow-md bg-gray-200 p-2 justify-end hover:scale-105 ease-in-out duration-300">
-        <img src="../../../assets/img/user.png" alt=""/>
-    </button>
-</a>
-<dialog>
-    
-</dialog>
+<div class="flex flex-col w-full border-4 relative z-10">
+    <a routerLink="/log-in">
+        <button class="w-10 h-10 rounded-full shadow-md bg-white p-2 justify-end hover:scale-105 ease-in-out duration-300">
+            <img src="../../../assets/img/user.png" alt=""/>
+        </button>
+        <div class="bg-white flex flex-col rounded mt-1 p-3 text-sm absolute right-5">
+            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Auditory</a>
+            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Profile</a>
+            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">settings</a>
+            <a href="" class="px-2 py-2 hover:bg-lime-500 rounded">Log-out</a>
+        </div>
+    </a>
+</div>
