--- a/src/app/pages/consult-bill-page/consult-bill-page.component.html
+++ b/src/app/pages/consult-bill-page/consult-bill-page.component.html
@@ -2,6 +2,7 @@
     <app-side-nav></app-side-nav>
     <div class="flex flex-col w-full ml-10">
         <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Consult Bills</p>
+        <app-user-icon></app-user-icon>
         <app-search-bar
         [direccion]="ruta"  
         ></app-search-bar>
