--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,43 +8,43 @@
     </div>
     <!--Primera tabla-->
     <div class="flex flex-col justify-start w-full">
-      <div class="card w-5/6 h-[40vh] bg-slate-100 shadow-md relative rounded-lg space-y-10">
-        <p class="text-2xl font-semibold drop-shadow-lg ml-3 mt-5">Overview</p>
+      <div class="card w-5/6 h-[40vh] bg-white shadow-md relative rounded-lg 2xl:space-y-10 xl:space-y-4 ">
+        <p class="text-2xl font-semibold drop-shadow-lg ml-3 2xl:mt-5 xl:mt-3">Overview</p>
         <div class="mt-3">
           <p class="text-md font-bold ml-3 mb-3">Ganancias</p>
-          <div class="w-5/6 bg-lime-500 h-3 rounded-lg ml-3"></div>
+          <div class="w-5/6 bg-lime-500 2xl:h-3 xl:h-2 rounded-lg ml-3"></div>
         </div>
         <div class="mt-3">
           <p class="text-md font-bold ml-3 mb-3">Gastos</p>
-          <div class="w-1/5 bg-red-500 h-3 rounded-lg ml-3"></div>
+          <div class="w-1/5 bg-red-500 2xl:h-3 xl:h-2 rounded-lg ml-3"></div>
         </div>
         <div class="mt-3">
           <p class="text-md font-bold ml-3 mb-3">Neto</p>
-          <div class="w-3/5 bg-cyan-400 h-3 rounded-lg ml-3"></div>
+          <div class="w-3/5 bg-cyan-400 2xl:h-3 xl:h-2 rounded-lg ml-3"></div>
         </div>
       </div>
     </div>
     <!--Segunda tabla-->
-      <div class="flex flex-col card h-[40vh] bg-slate-100 shadow-md relative rounded-lg w-5/6 mt-4 space-y-10">
-        <p class="text-2xl font-semibold drop-shadow-lg ml-3 mt-5">Facturas</p>
+      <div class="flex flex-col  card h-[40vh] bg-white shadow-md relative rounded-lg w-5/6 2xl:mt-8 xl:mt-4 2xl:space-y-10 xl:space-y-8">
+        <p class="text-2xl font-semibold drop-shadow-lg 2xl:ml-3 ml-2 2xl:mt-5 xl:mt-3">Facturas</p>
         <div class="flex space-x-20 mt-4">
           <div class="">
-            <p class="text-md font-semibold text-lime-500 drop-shadow-md ml-3">
+            <p class="text-md font-semibold text-lime-500 drop-shadow-md 2xl:ml-3 ml-2">
               Hechas
             </p>
-            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+            <p class="text-5xl mt-3 font-bold 2xl:ml-3 ml-2">278</p>
           </div>
           <div class="">
-            <p class="text-md font-semibold text-red-500 drop-shadow-md">
+            <p class="text-md font-semibold text-red-500 drop-shadow-md 2xl:ml-3 ml-2">
               Cobradas
             </p>
-            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+            <p class="text-5xl mt-3 font-bold 2xl:ml-3 ml-2">278</p>
           </div>
           <div class="">
-            <p class="text-md font-semibold text-cyan-400 drop-shadow-md ml-3">
+            <p class="text-md font-semibold text-cyan-400 drop-shadow-md 2xl:ml-3 ml-2">
               Sin pagar
             </p>
-            <p class="text-5xl mt-3 font-bold ml-3">278</p>
+            <p class="text-5xl mt-3 font-bold 2xl:ml-3 ml-2">278</p>
           </div>
         </div>
         <p class="text-sm font-normal mt-2 text-gray-400 ml-3">
