se creo la pagina de setting y su side-nav personalizado

--- a/src/app/components/bill-table/bill-table.component.html
+++ b/src/app/components/bill-table/bill-table.component.html
@@ -1,9 +1,9 @@
-<div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative">
+<div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative 2xl:text-md">
     Datos de las facturas
     <table class="w-full my-3" style="text-align:justify;">
         <thead>
-            <tr class="text-xs">
-                <th>ID Fcatura</th>
+            <tr class="text-xs 2xl:text-sm">
+                <th>ID Factura</th>
                 <th>Cliente</th>
                 <th>Fecha</th>
                 <th>Total</th>
