--- a/src/app/components/client-table/client-table.component.html
+++ b/src/app/components/client-table/client-table.component.html
@@ -1,8 +1,8 @@
-<div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative">
+<div class="m-5 my-5 ml-0 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg relative 2xl:text-md">
     Datos de los clientes
     <table class="w-full my-3" style="text-align:justify;">
         <thead>
-            <tr class="text-xs">
+            <tr class="text-xs 2xl:text-sm">
                 <th>Nombre / Razón social</th>
                 <th>Número de Documento</th>
                 <th>Balance actual</th>
